@@ -1,0 +1,25 @@
+; $Id: en-GB.tpl_hathor.ini 16708 2010-05-03 20:00:47Z eddieajau $
+; Joomla! Project
+; Copyright (C) 2005 - 2010 Open Source Matters. All rights reserved.
+; License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
+; Note : All ini files need to be saved as UTF-8 - No BOM
+
+HATHOR="Hathor Administrator template"
+TPL_HATHOR_XML_DESCRIPTION="Hathor is an accessible administrator template for Joomla! 1.6. The High Contrast CSS file can also be used for custom color branding."
+
+TPL_HATHOR_SHOW_SITE_NAME_LABEL="Show Site Name"
+TPL_HATHOR_SHOW_SITE_NAME_DESC="Show the site name in the template header"
+TPL_HATHOR_HIGH_CONTRAST_COLORS_LABEL="High Contrast Colors"
+TPL_HATHOR_HIGH_CONTRAST_COLORS_DESC="Use high contrast color palette for template. For custom color branding, make changes to highcontrast.css and select this option."
+TPL_HATHOR_BOLD_TEXT_LABEL="Bold Text"
+TPL_HATHOR_BOLD_TEXT_DESC="Use bold text"
+TPL_HATHOR_ALTERNATE_MENU_LABEL="Alternate Menu"
+TPL_HATHOR_ALTERNATE_MENU_DESC="Use the alternate menu which integrates mouse and keyboard. JavaScript Required. (The regular menu for Hathor is accessible with or without Javascript, but leaves the mouse and keyboard independent.)"
+
+TPL_HATHOR_SKIP_TO_MAIN_CONTENT="Skip to Main Content"
+TPL_HATHOR_MAIN_MENU="Main Menu"
+TPL_HATHOR_SUB_MENU="Sub Menu"
+
+; Template override strings
+TPL_HATHOR_CHECKMARK_ALL="Checkmark All"
+TPL_HATHOR_COM_MENUS_MENU="Menu"
