@@ -1,0 +1,8 @@
+; $Id: en-GB.tpl_hathor.ini 16708 2010-05-03 20:00:47Z eddieajau $
+; Joomla! Project
+; Copyright (C) 2005 - 2010 Open Source Matters. All rights reserved.
+; License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
+; Note : All ini files need to be saved as UTF-8 - No BOM
+
+HATHOR="Hathor Administrator template"
+TPL_HATHOR_XML_DESCRIPTION="Hathor is an accessible administrator template for Joomla! 1.6. The High Contrast CSS file can also be used for custom color branding."
