@@ -1,4 +1,4 @@
-; $Id$
+; $Id: en-GB.tpl_hathor.ini 16708 2010-05-03 20:00:47Z eddieajau $
 ; Joomla! Project
 ; Copyright (C) 2005 - 2010 Open Source Matters. All rights reserved.
 ; License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
