@@ -78,7 +78,7 @@ $app = JFactory::getApplication();
 
 		<!-- Site Title and Skip to Content -->
 		<div class="title-ua">
-			<h1 class="title"><?php echo $this->params->get('showSiteName') ? $app->getCfg('sitename'). " " . JText::_('ADMINISTRATION') : JText::_('ADMINISTRATION') ; ?></h1>
+			<h1 class="title"><?php echo $this->params->get('showSiteName') ? $app->getCfg('sitename'). " " . JText::_('JADMINISTRATION') : JText::_('JADMINISTRATION') ; ?></h1>
 			<div id="skiplinkholder"><p><a id="skiplink" href="#skiptarget"><?php echo JText::_('TPL_HATHOR_SKIP_TO_MAIN_CONTENT'); ?></a></p></div>
 		</div>
 
@@ -148,9 +148,9 @@ $app = JFactory::getApplication();
 <!-- Footer -->
 <div id="footer">
 	<p class="copyright">
-		<a href="http://www.joomla.org" target="_blank">Joomla!</a>
-		<?php echo  JText::_('ISFREESOFTWARE') ?>
-		<span class="version"><?php echo  JText::_('VERSION') ?> <?php echo  JVERSION; ?></span>
+		<?php $joomla= '<a href="http://www.joomla.org">Joomla!</a>';
+			echo JText::sprintf('JGLOBAL_ISFREESOFTWARE', $joomla) ?>
+		<span class="version"><?php echo  JText::_('JVERSION') ?> <?php echo  JVERSION; ?></span>
 	</p>
 </div>
 
